drop old style vars

--- a/News/news-list_style_default.less
+++ b/News/news-list_style_default.less
@@ -1,8 +1,8 @@
 .news-list_style_default {
-    @sub_margin:@layout_padding_vertical / 2;
+    @sub_margin:1em;
     #__item {
-        margin-bottom:@layout_padding_vertical;
-        padding-bottom:@layout_padding_vertical;
+        margin-bottom:2em;
+        padding-bottom:2em;
         border-bottom:1px solid;
         .tcolor(main 5, border-bottom-color);
     }
